css refactor and title fetch wen openChat start

--- a/gpt-webapp.web/src/main/resources/static/index.html
+++ b/gpt-webapp.web/src/main/resources/static/index.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet"href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	
-	<link href="/css/index.css" rel="stylesheet">
+	<link href="/css/panel.css" rel="stylesheet">
+	<link href="/css/chat.css" rel="stylesheet">
+	<link href="/css/messages.css" rel="stylesheet">
 	<title>ChatGPT</title>
 	</head>
 	<body>
