resize chat windows

--- a/gpt-webapp.web/src/main/resources/static/index.html
+++ b/gpt-webapp.web/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
 	<link href="/css/panel.css" rel="stylesheet">
 	<link href="/css/chat.css" rel="stylesheet">
 	<link href="/css/messages.css" rel="stylesheet">
+	<link href="/css/chat-resizer.css" rel="stylesheet">
 	<title>ChatGPT</title>
 	</head>
 	<body>
