--- a/gpt-webapp.web/src/main/resources/static/sign-in.html
+++ b/gpt-webapp.web/src/main/resources/static/sign-in.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/sign-in.css">
+<link rel="icon" href="/images/cuteBot.jpg" type="image/x-icon">
 <title>Inicia sesión</title>
 </head>
 <body>
