--- a/gpt-webapp.web/src/main/resources/static/index.html
+++ b/gpt-webapp.web/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet"href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+	<link rel="icon" href="/images/cuteBot.jpg" type="image/x-icon">
 	
 	<link href="/css/panel.css" rel="stylesheet">
 	<link href="/css/chat.css" rel="stylesheet">
