url fixed for new context path

--- a/gpt-webapp.web/src/main/resources/static/index.html
+++ b/gpt-webapp.web/src/main/resources/static/index.html
@@ -8,12 +8,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet"href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-	<link rel="icon" href="/images/cuteBot.jpg" type="image/x-icon">
+	<link rel="icon" href="/multi-gpt/images/cuteBot.jpg" type="image/x-icon">
 	
-	<link href="/css/panel.css" rel="stylesheet">
-	<link href="/css/chat.css" rel="stylesheet">
-	<link href="/css/messages.css" rel="stylesheet">
-	<link href="/css/chat-resizer.css" rel="stylesheet">
+	<link href="/multi-gpt/css/panel.css" rel="stylesheet">
+	<link href="/multi-gpt/css/chat.css" rel="stylesheet">
+	<link href="/multi-gpt/css/messages.css" rel="stylesheet">
+	<link href="/multi-gpt/css/chat-resizer.css" rel="stylesheet">
 	<title>ChatGPT</title>
 	</head>
 	<body>
@@ -39,7 +39,7 @@
 	                    <button type="button" class="btn btn-primary" id="saveTokenBtn">Guardar Token</button>
 	                </form>
 	                <div class="dropdown-divider"></div>
-	                <form action="/session/logout" method="POST">
+	                <form action="/multi-gpt/session/logout" method="POST">
 	                	<button class="dropdown-item" type="submit" id="logoutBtn">Cerrar Sesión</button>
 	                </form>
 	            </div>
@@ -49,11 +49,11 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-		<script src="/js/send-messages.js"></script>
-		<script src="/js/drag-chat.js"></script>
-		<script src="/js/index-configurations.js"></script>
-		<script src="/js/panel.js"></script>
-		<script src="/js/chat.js"></script>
+		<script src="/multi-gpt/js/send-messages.js"></script>
+		<script src="/multi-gpt/js/drag-chat.js"></script>
+		<script src="/multi-gpt/js/index-configurations.js"></script>
+		<script src="/multi-gpt/js/panel.js"></script>
+		<script src="/multi-gpt/js/chat.js"></script>
 	</body>
 	
 </html>
