--- a/gpt-webapp.web/src/main/resources/static/sign-up.html
+++ b/gpt-webapp.web/src/main/resources/static/sign-up.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/css/sign-in.css">
-<link rel="icon" href="/images/cuteBot.jpg" type="image/x-icon">
+<link rel="stylesheet" href="/multi-gpt/css/sign-in.css">
+<link rel="icon" href="/multi-gpt/images/cuteBot.jpg" type="image/x-icon">
 <title>Registro</title>
 </head>
 <body>
 	<div class="signin-container">
 	    <div class="signin-header">Registro</div>
-	    <form action ="/user/register" method="POST">
+	    <form action ="/multi-gpt/user/register" method="POST">
 	        <div class="form-group">
 	            <input type="email" class="form-control" id="email" name="email" placeholder="Correo electrónico" required>
 	        </div>
@@ -32,6 +32,6 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<script src="/js/session-error-handler.js"></script>
+	<script src="/multi-gpt/js/session-error-handler.js"></script>
 </body>
 </html>
