--- a/gpt-webapp.web/src/main/resources/static/error/404.html
+++ b/gpt-webapp.web/src/main/resources/static/error/404.html
@@ -58,7 +58,7 @@
         <i class="fas fa-exclamation-triangle"></i>
         <h1>Error 404</h1>
         <p>Página no encontrada</p>
-        <button onclick="window.location.href='index.html'">Volver al inicio</button>
+        <button onclick="window.location.href='/multi-gpt/index.html'">Volver al inicio</button>
     </div>
 </body>
 </html>
